--- a/.github/workflows/run_manual_smokeTest.yml
+++ b/.github/workflows/run_manual_smokeTest.yml
@@ -20,9 +20,6 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
           cache: maven
-      - name: Build with Maven
-        run: mvn -B package --file pom.xml      
-      # create .env file with secrets 
       - name: create-json
         uses: jsdaniell/create-json@v1.2.2
         with:
@@ -34,6 +31,9 @@ jobs:
           mkdir target
           cd target
           mkdir karate-report
+      # - name: Build with Maven
+      #   run: mvn -B package --file pom.xml      
+      # create .env file with secrets 
       # run smoke tests on All Browsers
       - name: Run Smoke tests
         run: mvn test -Dkarate.env="prod"  -Dkarate.options="--tags @smoke"
