--- a/.github/workflows/run_manual_smokeTest.yml
+++ b/.github/workflows/run_manual_smokeTest.yml
@@ -13,6 +13,11 @@ jobs:
     env: 
       SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
     steps:
+      - name: create-json
+        uses: jsdaniell/create-json@v1.2.2
+        with:
+          name: "env_data.json"
+          json: "{ "prod" :{ "API_URL": ${{ secrets.TODOIST_API_URL }}, "TOKEN": ${{ secrets.TODOIST_TOKEN }} }}"
       - uses: actions/checkout@v2
       - name: Set up JDK 11
         uses: actions/setup-java@v2
@@ -20,28 +25,9 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
           cache: maven
-      - name: create-json
-        uses: jsdaniell/create-json@v1.2.2
-        with:
-          name: "env_data.json"
-          json: '{ "prod" :{ "API_URL": ${{ secrets.TODOIST_API_URL }}, "TOKEN": ${{ secrets.TODOIST_TOKEN }} }}'
-      # create the karate-report folder to uploda the test result
-      - name: Create dir
-        run: |
-          mkdir target
-          cd target
-          mkdir karate-report
-      # - name: Build with Maven
-      #   run: mvn -B package --file pom.xml      
-      # create .env file with secrets 
       # run smoke tests on All Browsers
       - name: Run Smoke tests
         run: mvn test -Dkarate.env="prod"  -Dkarate.options="--tags @smoke"
-      - name: Upload test results
-        uses: actions/upload-artifact@v2
-        with:
-          name: karrate-report
-          path: karrate-report
         if: always()
       ###### Commit Smoke Test status ######
       - name: Tests Passed
@@ -74,11 +60,3 @@ jobs:
             "description": "Smoke tests failed",
             "target_url": "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
           }'
-      # Slack Integration - Send message to #qa-challenge channel
-      - name: Slack Notification
-        uses: act10ns/slack@v1
-        with: 
-          status: ${{ job.status }}
-          steps: ${{ toJson(steps)}}
-          channel: '#qa-challenge'
-        if: always()
