--- a/.github/workflows/run_manual_smokeTest.yml
+++ b/.github/workflows/run_manual_smokeTest.yml
@@ -11,18 +11,21 @@ jobs:
   e2e-backend-tests:
     runs-on: ubuntu-latest
     steps:
-      - name: create-json
-        uses: jsdaniell/create-json@v1.2.2
-        with:
-          name: "env_data.json"
-          json: '{ "prod" :{ "API_URL": ${{ secrets.TODOIST_API_URL }}, "TOKEN": ${{ secrets.TODOIST_TOKEN }} }}'
-      - uses: actions/checkout@v2
-      - name: Set up JDK 11
+      - name: git checkout
+        uses: actions/checkout@v2
+      - name: set up jdk 11
         uses: actions/setup-java@v2
         with:
-          java-version: '11'
-          distribution: 'adopt'
-          cache: maven
-      # run smoke tests on All Browsers
-      - name: Run Smoke tests
+          distribution: adopt
+          java-version: 11
+      - name: cache maven 
+        uses: actions/cache@v1
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+      - name: Run a one-line script
+        run: echo Starting the API testing!
+      - name: test execution
         run: mvn test -Dkarate.env="prod"  -Dkarate.options="--tags @smoke"
