--- a/.github/workflows/run_manual_smokeTest.yml
+++ b/.github/workflows/run_manual_smokeTest.yml
@@ -13,6 +13,11 @@ jobs:
     steps:
       - name: git checkout
         uses: actions/checkout@v2
+      - name: create json file
+        uses: jsdaniell/create-json@v1.2.2
+        with:
+          name: "env_data.json"
+          json: '{ "prod" :{ "API_URL": ${{ secrets.TODOIST_API_URL }}, "TOKEN": ${{ secrets.TOKEN }} }}'
       - name: set up jdk 11
         uses: actions/setup-java@v2
         with:
