--- a/.github/workflows/run_manual_smokeTest.yml
+++ b/.github/workflows/run_manual_smokeTest.yml
@@ -11,12 +11,15 @@ jobs:
   e2e-backend-tests:
     runs-on: ubuntu-latest
     steps:
+      # create the playwright-report folder to uploda the test result
+      - name: Create dir
+        run: |
+          mkdir todoistApp
       - name: git checkout
         uses: actions/checkout@v2
       - name: create json file
         uses: jsdaniell/create-json@v1.2.2
         with:
-          run: pwd
           name: "env_data.json"
           json: '{ "prod" :{ "API_URL": ${{ secrets.TODOIST_API_URL }}, "TOKEN": ${{ secrets.TOKEN }} }}'
           dir: 'todoistApp/'
