--- a/.github/workflows/run_manual_smokeTest.yml
+++ b/.github/workflows/run_manual_smokeTest.yml
@@ -13,16 +13,6 @@ jobs:
     steps:
       - name: git checkout
         uses: actions/checkout@v2
-      # create the playwright-report folder to uploda the test result
-      - name: Create dir
-        run: |
-          mkdir todoistApp
-      - name: create json file
-        uses: jsdaniell/create-json@v1.2.2
-        with:
-          name: "env_data.json"
-          json: '{ "prod" :{ "API_URL": ${{ secrets.TODOIST_API_URL }}, "TOKEN": ${{ secrets.TOKEN }} }}'
-          dir: 'todoistApp/'
       - name: set up jdk 11
         uses: actions/setup-java@v2
         with:
@@ -35,7 +25,19 @@ jobs:
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
-      - name: Run a one-line script
+      - name: Create dir
+        run: |
+          mkdir todoistApp
+      - name: create json file
+        uses: jsdaniell/create-json@v1.2.2
+        with:
+          name: "env_data.json"
+          json: '{ "prod" :{ "API_URL": ${{ secrets.TODOIST_API_URL }}, "TOKEN": ${{ secrets.TOKEN }} }}'
+          dir: 'todoistApp/'
+          run: pwd
+      - name: print file
+        run: echo env_data.json
+      - name: Run API Tests
         run: echo Starting the API testing!
       - name: test execution
         run: mvn test -Dkarate.env="prod"  -Dkarate.options="--tags @smoke"
