--- a/.github/workflows/run_manual_smokeTest.yml
+++ b/.github/workflows/run_manual_smokeTest.yml
@@ -30,7 +30,8 @@ jobs:
         with:
           name: "env_data.json"
           json: '{ "prod" :{ "API_URL": ${{ secrets.TODOIST_API_URL }}, "TOKEN": ${{ secrets.TOKEN }} }}'
-          dir: '/target/test-classes/todoistApp/'
+      - name: print PWD
+        run: PWD
       - name: Run API Tests
         run: echo Starting the API testing!
       - name: test execution
