--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
             <version>${karate.version}</version>
             <scope>test</scope>
         </dependency>  
+        <dependency>
+            <groupId>net.masterthought</groupId>
+            <artifactId>cucumber-reporting</artifactId>
+            <version>5.6.1</version>
+        </dependency>
     </dependencies>
 
     <build>
