update report path

--- a/.github/workflows/run_manual_smokeTest.yml
+++ b/.github/workflows/run_manual_smokeTest.yml
@@ -42,5 +42,5 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: cucumber-report
-          path: cucumber-html-reports
+          path: target/cucumber-html-reports
         if: always()
