--- a/.github/workflows/run_manual_smokeTest.yml
+++ b/.github/workflows/run_manual_smokeTest.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           name: "env_data.json"
           json: '{ "prod" :{ "API_URL": ${{ secrets.TODOIST_API_URL }}, "TOKEN": ${{ secrets.TOKEN }} }}'
-      # create the playwright-report folder to uploda the test result
+      # create the Cucumber report folder to uploda the test result
       - name: Create dir
         run: |
           mkdir cucumber-html-reports
@@ -44,3 +44,34 @@ jobs:
           name: cucumber-report
           path: target/cucumber-html-reports
         if: always()
+      ###### Commit Smoke Test status ######
+      - name: Tests Passed
+        if: ${{ success() }}
+        # set the merge commit status check
+        # using GitHub REST API
+        run: |
+          curl --request POST \
+          --url https://api.github.com/repos/${{ github.repository }}/statuses/${{ github.sha }} \
+          --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
+          --header 'content-type: application/json' \
+          --data '{
+            "context": "Smoke Tests",
+            "state": "success",
+            "description": "Smoke tests passed",
+            "target_url": "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+          }'
+      - name: Test Failed
+        if: ${{ failure() }}
+        # set the merge commit status check
+        # using GitHub REST API
+        run: |
+          curl --request POST \
+          --url https://api.github.com/repos/${{ github.repository }}/statuses/${{ github.sha }} \
+          --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
+          --header 'content-type: application/json' \
+          --data '{
+            "context": "Smoke Tests",
+            "state": "failure",
+            "description": "Smoke tests failed",
+            "target_url": "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+          }'
