--- a/.github/workflows/run_manual_smokeTest.yml
+++ b/.github/workflows/run_manual_smokeTest.yml
@@ -10,6 +10,8 @@ on: workflow_dispatch
 jobs:
   e2e-backend-tests:
     runs-on: ubuntu-latest
+    env: 
+      SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
     steps:
       - name: git checkout
         uses: actions/checkout@v3
