--- a/.github/workflows/run_manual_smokeTest.yml
+++ b/.github/workflows/run_manual_smokeTest.yml
@@ -77,11 +77,11 @@ jobs:
             "description": "Smoke tests failed",
             "target_url": "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
           }'
-      # Slack Integration - Send message to #qa-backend-challenge channel
+      # Slack Integration - Send message to #qa-backend-smoketest channel
       - name: Slack Notification
         uses: act10ns/slack@v1
         with: 
           status: ${{ job.status }}
           steps: ${{ toJson(steps)}}
-          channel: '#qa-backend-challenge'
+          channel: '#qa-backend-smoketest'
         if: always()
